testsuite/tests/gadt/records-fail1.stderr

records-fail1.hs:18:6: error:
    parse error on input ‘{’ (possibly incorrect indentation or mismatched brackets)
